...
    <string name="activity_query_rendered_features_box_count">Count features in box</string>
    <string name="activity_query_rendered_features_box_symbol_count">Count symbols in box</string>
    <string name="activity_query_rendered_features_box_highlight">Highlight features in box</string>
    <string name="activity_query_source_features">Query source features</string>
    <string name="activity_symbol_layer">Symbols</string>
    <string name="activity_add_sprite">Add Custom Sprite</string>
    <string name="activity_simple_map">Simple Map</string>
    <string name="activity_map_change">Map Change Events</string>
    <string name="activity_map_visibility">Visibility Map</string>
    <string name="activity_map_in_dialog">Dialog with map</string>
    <string name="activity_url_transform">Url transform</string>
    <string name="activity_restricted_bounds">Restrict camera to a bounds</string>
    <string name="activity_fill_extrusion_layer">Fill extrusions</string>
...
